--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -5,12 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <title>@ViewData["Title"] - WebApp</title>
-   
+    @await Html.PartialAsync("_HeaderPartial")
 </head>
 <body>
-  
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"><h2 class="text-primary  m-2">SUCURSAL</h2></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mob-navbar" aria-label="Toggle">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse fs-5" id="mob-navbar">
+            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link active fs-" aria-current="page" href="#">Inicio</a>
+                </li>
+
+
+
+                <li class="nav-item">
+                    <a class="nav-link active fs-" aria-current="page" href="#">Cliente</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active fs-" aria-current="page" asp-page="/Solicitud/Grid">Solicitud</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active fs-" aria-current="page" href="Servicio/Grid.cshtml">Servicio</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+    <footer class="text-center text-white fixed-bottom" style="background-color: #21081a;">
+
+        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2022:
+            <a class="text-white" href="">Programacion 6</a>
+        </div>
+    </footer>
     @RenderBody()
-  
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
