--- a/WebApp/Pages/Solicitud/Grid.cshtml
+++ b/WebApp/Pages/Solicitud/Grid.cshtml
@@ -5,7 +5,7 @@
 <div class="container-fluid">
     <div class="card">
         <div class="card-header">
-            Contacto
+            Solicitud
         </div>
         <div class="card-body">
 
