--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -1,16 +1,25 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <title>@ViewData["Title"] - WebApp</title>
-   
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<base href="/" />
+<title>@ViewData["Title"] - WebApp</title>
+@await Html.PartialAsync("_HeaderPartial")
 </head>
 <body>
-  
-    @RenderBody()
-  
-    @await RenderSectionAsync("Scripts", required: false)
+
+
+
+@RenderBody()
+
+
+
+
+@await Html.PartialAsync("_ScriptsPartial")
+
+
+
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
