--- a/WebApp/Pages/Servicio/Edit.cshtml
+++ b/WebApp/Pages/Servicio/Edit.cshtml
@@ -2,3 +2,63 @@
 @model WebApp.Pages.Servicio.EditModel
 @{
 }
+
+<div id="AppEdit" class="container">
+    <div class="card">
+        <div class="card-header">
+            @(Model.id.HasValue?"Actualizar":"Nuevo")
+        </div>
+        <div class="card-body">
+
+
+            <form id="FormEdit" method="post">
+               
+                <div>
+                    <input type="hidden" asp-for="Entity.IdServicio" />
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="Entity.IdServicio" class="form-label">ID Servicio</label>
+                    <input type="number" class="form-control" asp-for="Entity.IdServicio" required>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="Entity.NombreServicio" class="form-label">Nombre de servicio</label>
+                    <input type="text" class="form-control" asp-for="Entity.NombreServicio" maxlength="250" required>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="Entity.PlazoEntrega" class="form-label">Plazo de entrega</label>
+                    <input type="number" class="form-control" asp-for="Entity.PlazoEntrega" maxlength="250" required>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="Entity.CostoServicio" class="form-label">Costo servicio</label>
+                    <input type="number" class="form-control" asp-for="Entity.CostoServicio" maxlength="250" required>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="Entity.estado" class="form-label">Estado</label>
+                    <input type="number" class="form-control" asp-for="Entity.estado" maxlength="250" required>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="Entity.CuentaContable" class="form-label">Cuenta Contable</label>
+                    <input type="date" class="form-control" asp-for="Entity.CuentaContable" maxlength="250" required>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <button type="submit" class="btn btn-primary">
+                            @(Model.id.HasValue?"Actualizar":"Agregar")
+                        </button>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+
+    .
+
+</div>
+
