--- a/WebApp/Pages/Solicitud/Grid.cshtml
+++ b/WebApp/Pages/Solicitud/Grid.cshtml
@@ -31,21 +31,22 @@
                         <tbody>
                             @foreach (var item in Model.GridList)
                             {
-                            <tr>
-                                <td>@item.IdSolicitud</td>
-                                <td>@item.IdCliente</td>
-                                <td>@item.IdServicio</td>
-                                <td>@item.Cantidad</td>
-                                <td>@item.Monto</td>
-                                <td>@item.FechaEntrega</td>
-                                <td>@item.usuarioEntrega</td>
-                                <td>@item.observaciones</td>
-                  
-                                <td>
-                                    <a class="btn btn-secondary" asp-page="Edit" asp-route-id="@item.IdSolicitud"><i class='bx bx-edit'></i></a>
-                                    <button type="button" class="btn btn-secondary" onclick="ContactoGrid.OnClickEliminar(@item.IdSolicitud)"><i class='bx bx-trash'></i></button>
-                                </td>
-                            </tr>}
+                                <tr>
+                                    <td>@item.IdSolicitud</td>
+                                    <td>@item.IdCliente</td>
+                                    <td>@item.IdServicio</td>
+                                    <td>@item.Cantidad</td>
+                                    <td>@item.Monto</td>
+                                    <td>@item.FechaEntrega</td>
+                                    <td>@item.usuarioEntrega</td>
+                                    <td>@item.observaciones</td>
+
+                                    <td>
+                                        <a class="btn btn-secondary" asp-page="Edit" asp-route-id="@item.IdSolicitud"><i class='bx bx-edit'></i></a>
+                                        <button type="button" class="btn btn-secondary" onclick="Solicitud.OnClickEliminar(@item.IdSolicitud)"><i class='bx bx-trash'></i></button>
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
 
@@ -53,5 +54,14 @@
             </div>
         </div>
     </div>
-    .
 </div>
+
+@section Scripts{
+
+    <script>
+        var MensajeApp = "@Html.Raw(Model.Mensaje)";
+    </script>
+
+    <script defer src="~/App/Solicitud/Grid.js"></script>
+
+}
