--- a/WebApp/Pages/Cliente/Grid.cshtml
+++ b/WebApp/Pages/Cliente/Grid.cshtml
@@ -3,6 +3,91 @@
 @{
 }
 
-<div>
-    <h1>hola </h1>
+<<div class="container-fluid">
+
+    <div class="card">
+        @*<h5 class="card-header">Parametros</h5>*@
+        <div class="card-body">
+            <h5 class="card-title fs-2 p-3">SERVICIO</h5>
+
+
+            <a class="btn btn-secondary" asp-page="Edit"><i class='bx bxs-add-to-queue'></i></a>
+            <div class="row">
+                <div class="col-12">
+                    <table id="GridView" class="table table-bordered table-striped  table-hover">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>ID CLIENTE</th>
+                                <th>Identificacion</th>
+                                <th>IdTipoIdentificacion</th>
+                                <th>Nombre</th>
+                                <th>PrimerApellido</th>
+                                <th>SegundoApellido</th>
+                                <th>FechaNacimiento</th>
+                                <th>Nacionalidad</th>
+                                <th>FechaDefuncion</th>
+                                <th>Genero</th>
+                                <th>NombreApellidosPadre</th>
+                                <th>NombreApellidosMadre</th>
+                                <th>Pasaporte</th>
+                                <th>CuentaIBAN</th>
+                                <th>CorreoNotifica</th>
+
+
+
+                                <th>ACCION</th>
+
+                            </tr>
+
+                        </thead>
+
+                        <tbody>
+                            @foreach (var item in Model.GridList)
+                            {
+                                <tr>
+                                    <td> @item.IdCliente</td>
+                                    <td> @item.Identificacion</td>
+                                    <td> @item.IdTipoIdentificacion</td>
+                                    <td> @item.Nombre</td>
+                                    <td> @item.PrimerApellido</td>
+                                    <td> @item.SegundoApellido</td>
+                                    <td> @item.FechaNacimiento</td>
+                                    <td> @item.Nacionalidad</td>
+                                    <td> @item.FechaDefuncion</td>
+                                    <td> @item.NombreApellidosPadre</td>
+                                    <td> @item.NombreApellidosMadre</td>
+                                    <td> @item.Pasaporte</td>
+                                    <td> @item.CuentaIBAN</td>
+                                    <td> @item.CorreoNotifica</td>
+                                    <td>
+                                        <a class="btn btn-secondary" asp-page="Edit" asp-route-id="@item.IdCliente"><i class='bx bx-edit'></i></a>
+                                        <button type="button" class="btn btn-secondary" onclick="ClienteGrid.OnClickEliminar(@item.IdCliente)"><i class='bx bxs-trash'></i></button>
+                                    </td>
+                                </tr>
+
+                            }
+                        </tbody>
+                    </table>
+
+                </div>
+
+
+            </div>
+
+
+        </div>
+    </div>
 </div>
+
+
+
+@section Scripts{
+
+    <script>
+        var MensajeApp = "@Html.Raw(Model.Mensaje)";
+    </script>
+
+
+    <script defer src="~/App/Cliente/Grid.js"></script>
+
+}
