--- a/WebApp/Pages/Servicio/Edit.cshtml
+++ b/WebApp/Pages/Servicio/Edit.cshtml
@@ -12,15 +12,9 @@
 
 
             <form id="FormEdit" method="post">
-               
-                <div>
-                    <input type="hidden" asp-for="Entity.IdServicio" />
-                </div>
 
-                <div class="form-group mb-3">
-                    <label for="Entity.IdServicio" class="form-label">ID Servicio</label>
-                    <input type="number" class="form-control" asp-for="Entity.IdServicio" required>
-                </div>
+                <input type="hidden" asp-for="Entity.IdServicio" />
+                
 
                 <div class="form-group mb-3">
                     <label for="Entity.NombreServicio" class="form-label">Nombre de servicio</label>
@@ -62,3 +56,6 @@
 
 </div>
 
+@section Scripts{
+    <script defer src="~/App/Servicio/Edit.js"></script>
+ }
