Se corrigieron errores y se creo CRUD_Solicitud

--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active fs-" aria-current="page" href="#">Solicitud</a>
+                    <a class="nav-link active fs-" aria-current="page" href="Solicitud/Grid">Solicitud</a>
                 </li>
 
                 <li class="nav-item">
