Cambios en cliente

--- a/WebApp/Pages/Cliente/Grid.cshtml
+++ b/WebApp/Pages/Cliente/Grid.cshtml
@@ -13,28 +13,26 @@
 
             <a class="btn btn-secondary" asp-page="Edit"><i class='bx bxs-add-to-queue'></i></a>
             <div class="row">
-                <div class="col-1">
-                    <table id="GridView" class="table table-bordered table-striped  table-hover">
+                <div class="col-12">
+                    <table style="width:70%" id="GridView" class="table table-bordered table-striped  table-hover" >
                         <thead class="table-dark">
-                            <tr>
+                            
+                            <tr style="font-size:xx-small">
                                 <th>ID CLIENTE</th>
                                 <th>Identificacion</th>
-                                <th>IdTipoIdentificacion</th>
+                                <th>ID Identificacion</th>
                                 <th>Nombre</th>
-                                <th>PrimerApellido</th>
-                                <th>SegundoApellido</th>
-                                <th>FechaNacimiento</th>
+                                <th>Apellido</th>
+                                <th>S.Apellido</th>
+                                <th>Fecha. N</th>
                                 <th>Nacionalidad</th>
-                                <th>FechaDefuncion</th>
+                                <th>Fecha funcion</th>
                                 <th>Genero</th>
-                                <th>NombreApellidosPadre</th>
-                                <th>NombreApellidosMadre</th>
+                                <th>Nombre del Padre</th>
+                                <th>Nombre Madre</th>
                                 <th>Pasaporte</th>
-                                <th>CuentaIBAN</th>
-                                <th>CorreoNotifica</th>
-
-
-
+                                <th>Cuenta IBAN</th>
+                                <th>Correo</th>
                                 <th>ACCION</th>
 
                             </tr>
